jalv (1.6.9) unstable; urgency=medium

  * Add Qt6 version
  * Add missing short versions of command line options
  * Add option to install tool man pages
  * Build Qt UI with -fPIC
  * Clean up and strengthen code
  * Clean up command line help output
  * Fix clashing command line options
  * Fix minor memory leaks
  * Reduce Jack process callback overhead
  * Remove Gtk2 interface
  * Replace use of deprecated Gtk interfaces
  * Switch to external zix dependency
  * Use Gtk switches instead of checkboxes for toggle controls
  * Use fewer platform-specific APIs
  * Use portable zix filesystem API

 -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 16:53:31 +0000

jalv (1.6.8) stable; urgency=medium

  * Add Gtk plugin selector UI and desktop file
  * Add missing option in console help output
  * Add version option to console executable
  * Build Qt interface as C++14
  * Change no-menu short option to m to avoid clash with jack-name
  * Clean up and modernize code
  * Fix "preset" console command when "presets" hasn't been called
  * Fix MSVC build
  * Fix atom buffer alignment
  * Fix crash when running jalv without arguments
  * Fix man page headers
  * Fix memory leaks
  * Fix outdated man pages
  * Fix spurious transport messages
  * Fix thread-safety of plugin/UI communication rings
  * Flush stdout after printing control values in console interface
  * Print status information consistently to stdout
  * Propagate worker errors to the scheduler when possible
  * Remove Gtkmm interface
  * Remove Qt4 support
  * Support both rdfs:label and lv2:name for port group labels
  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Sat, 10 Sep 2022 00:43:05 +0000

jalv (1.6.6) stable; urgency=medium

  * Add a command line argument to select a specific UI
  * Explicitly support lv2:inPlaceBroken
  * Ignore ports with nonsense lv2:control designations
  * Remove Jack session support
  * Support port events for ui:showInterface UIs
