@@ -3,6 +3,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Add Qt6 version
   * Add missing short versions of command line options
   * Add option to install tool man pages
+  * Add support for control outputs with lv2:latency designation
   * Build Qt UI with -fPIC
   * Clean up and strengthen code
   * Clean up command line help output
@@ -16,7 +17,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Use fewer platform-specific APIs
   * Use portable zix filesystem API
 
- -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 16:53:31 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 23:44:39 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
